[package]
name = "todoer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
clap = {verison="4.1.11", features = ["cargo"]}
dotenv = "0.15.0"