[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
clap = { version="4.1.11", features = ["cargo"] }
dotenv = "0.15.0"
chrono = "0.4.19"
dirs = "3.0.2"
dialoguer = "0.9.0"
thiserror = "1.0.28"
reqwest = "0.11.16"
tokio = { version = "1.27.0", features = ["full"] }
regex = "1.8.1"
uuid = "1.3.1"
